Folders Panel: Don't open the properties dialog modal

BUG: 270484
FIXED-IN: 4.7.0